# NumericalAnalysis

./: .gitignore  Copie_de_MQ_MOTTIER.ipynb  MQS.ipynb  README.md  carbone.py  climateModel.py  equation.md  euler.cpp  euler.py  rungekutta.cpp  rungekutta.py  temp.py
Hawkes/: Hawks_report.ipynb  Hawks_report_KHOUTAIBI_Iliass_BARAKA_Rayane_LAITA_Sami.ipynb  OFDMA.ipynb  OFDMA_code.py  PROJET3_MERIEM_NAJI__WISSAL_BELHORMA.ipynb  hawks(1).ipynb  hawks.ipynb  info.csv  project.ipynb  temp.ipynb
MQS/: MQS.ipynb
cpp/: CMakeLists.txt  Makefile  carbone.h  climate.cpp  euler.cpp  euler.h  rungekutta.cpp  rungekutta.h
python/: carbone.py  climate.ipynb  climateModel.py  euler.py  rungekutta.py
tps/: TP6-intro-MC.ipynb  accept-reject.py  boxMuller.py  functions.py  monte-carlo-proj.ipynb  monte-carlo.py  oral.ipynb  td4.ipynb
